# INIX

./: CMakeLists.txt  README.md
build-mingw/: CMakeCache.txt
build-mingw2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-mingw2/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-mingw2/Testing/Temporary/: CTestCostData.txt
build-mingw2/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-mingw2/src/ini_editor_autogen/: deps  moc_predefs.h
build-mingw2/src/ini_editor_autogen/VJIZ3MDCXP/: moc_MainWindow.cpp.d
build-mingw2/src/ini_editor_autogen/XTPST4PFOC/: moc_DiffTableModel.cpp.d  moc_IniFilterProxyModel.cpp.d  moc_IniSettingsTableModel.cpp.d  moc_MergePreviewTableModel.cpp  moc_MergePreviewTableModel.cpp.d
build-mingw2/src/ini_editor_autogen/ZIYP446TXO/: moc_IniDocument.cpp  moc_IniDocument.cpp.d
build-mingw2/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-mingw2/tests/ini_editor_tests_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-mingw2/tests/ini_editor_tests_autogen/RCFEFXN5P7/: moc_IniDocument.cpp.d
build-mingw2/tests/ini_editor_tests_autogen/include/: IniCoreTests.moc.d
build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INIX.slnx  INIX_lrelease.vcxproj  INIX_lrelease.vcxproj.filters  INIX_lupdate.vcxproj  INIX_lupdate.vcxproj.filters  INIX_other_files.vcxproj  INIX_other_files.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  release_translations.vcxproj  update_translations.vcxproj  update_translations.vcxproj.filters
build-msvc/.lupdate/: INIX_lupdate_project.Debug.cmake  INIX_lupdate_project.MinSizeRel.cmake  INIX_lupdate_project.RelWithDebInfo.cmake  INIX_lupdate_project.Release.cmake
build-msvc/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build-msvc/src/: CTestTestfile.cmake  INIX.vcxproj  INIX.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build-msvc/src/INIX.dir/Release/: INIX.exe.recipe  app.res  app_icon.res
build-msvc/src/INIX_autogen/: mocs_compilation_Release.cpp
build-msvc/src/INIX_autogen/GBFAFXFCVO/: qrc_resources_Release.cpp
build-msvc/tests/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  ini_editor_tests.vcxproj  ini_editor_tests.vcxproj.filters
build-msvc/tests/ini_editor_tests.dir/Release/: ini_editor_tests.exe.recipe
build-msvc/tests/ini_editor_tests_autogen/: mocs_compilation_Release.cpp
build-msvc/tests/ini_editor_tests_autogen/include_Release/: IniCoreTests.moc.d
build-msvc/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
src/: CMakeLists.txt  app.manifest  main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/assets/: resources.qrc
src/domain/: IniDocument.cpp  IniDocument.h  IniTypes.h
src/services/: IniDiffService.cpp  IniDiffService.h  IniMergeService.cpp  IniMergeService.h  IniParser.cpp  IniParser.h  IniSearchService.cpp  IniSearchService.h  IniSerializer.cpp  IniSerializer.h
src/translations/: inix_ja.ts
src/ui/models/: DiffTableModel.cpp  DiffTableModel.h  IniFilterProxyModel.cpp  IniFilterProxyModel.h  IniSettingsTableModel.cpp  IniSettingsTableModel.h  MergePreviewTableModel.cpp  MergePreviewTableModel.h
tests/: CMakeLists.txt  IniCoreTests.cpp
tests/data/: base.ini  mod.ini
(+52 files in other folders)
